styles/form.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

main {
    display: grid;
    place-items: center;
}

header {
    color: #000;
    font-size: 1.5rem;
    text-align: center;
    padding: 20px;
    background-color:#F9C8F3 ;
}


/* Form styles */
.form-container {
    background-color: #fcf0ec;
    border: 2px solid rgba(0, 0, 0, 0.1);
    padding: 20px;
    margin: 2% 0;
    width: 100%;
    max-width: 500px;
}

form {
    display: flex;
    flex-direction: column;
    gap: 1em;
}

fieldset {
    border: 1px solid #ccc;
    padding: 1em;
}

fieldset label {
    padding-top: 10px;
}

.short {
    display: flex;
    flex-direction: column;
}

input[type="submit"] {
    font-size: 24px;
    background-color:#2e182c;  
    border-radius: 10px;
    color: #fff;
    padding: 10px 20px;
    margin-top: 10px;
    border: none;
    cursor: pointer;
    transition: 0.5s ease;
}

input[type="submit"]:hover {
    color: #cbc9c9;
    transform: translateY(-0.2em);
}

#productName,
#installationDate,
#userName,
input[type="checkbox"],
textarea {
    font-size: 1.2rem;
    padding: 10px;
}

label {
    font-size: 1.2rem;
}

strong {
    color: rgb(0, 182, 76);
    font-style: italic;
    font-size: 14px;
}

.required {
    color: rgb(68, 0, 255);
    font-style: italic;
    font-size: 14px;
}


@media screen and (max-width: 748px) {
    .form-container {
        width: 90%;
        margin: 5%;
    }

    form {
        gap: 0.8em;
    }

    input[type="submit"] {
        font-size: 20px;
        padding: 8px 16px;
    }
}

footer {
    display: flex;
    flex-direction: column;
    background: #F9C8F3;
    text-align: center;
    color: #000000;
    justify-content: center
}

